--- a/backend/config/.env.sample
+++ b/backend/config/.env.sample
@@ -1,8 +1,8 @@
-PORT=4000
-DB_URI=""
+PORT=
+DB_URI=
 
 JWT_SECRET=
-JWT_EXPIRE=5
+JWT_EXPIRE=
 
 
 SMTP_SERVICE=
@@ -19,4 +19,4 @@ CLOUDINART_SECRET=
 
 
 
-FRONTEND_URL="http://localhost:3000"
+FRONTEND_URL=
